<resources>
    <string name="app_name">YashMistryTask2</string>

    <string name="title">TastyRecipes</string>

    <string name="registerTxt">Register</string>

    <string name="registerBtn">REGISTER</string>
    <string name="loginBtn">LOGIN</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="address">Address</string>

    <string name="existingUser">Existing User?</string>

</resources>